--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,5 @@
 REACT_APP_BACKEND_URL=https://0b1da948-e914-4c34-a177-70187a458f02.preview.emergentagent.com
 WDS_SOCKET_PORT=443
+
+REACT_APP_BACKEND_URL=https://b0cc9083-c5e5-4c20-98de-2b3ec55b2b8a.preview.emergentagent.com
+VITE_REACT_APP_BACKEND_URL=https://b0cc9083-c5e5-4c20-98de-2b3ec55b2b8a.preview.emergentagent.com
