--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -13,10 +13,19 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>opex-backend</name>
     <description>OpEx Management System Backend</description>
-    <properties>
-        <java.version>1.8</java.version>
-    </properties>
+<properties>
+    <java.version>1.8</java.version>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+</properties>
+
     <dependencies>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -62,12 +71,17 @@
         </dependency>
     </dependencies>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
+  <build>
+    <plugins>
+        <plugin>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.10.1</version> <!-- Use 3.8+ for Java 17 -->
+            <configuration>
+                <source>1.8</source>
+                <target>1.8</target>
+                <release>8</release>
+            </configuration>
+        </plugin>
+    </plugins>
+</build>
 </project>
