--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -23,5 +23,5 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
 # JWT Configuration
-jwt.secret=mySecretKey
+jwt.secret=XqR7&!m9Pz2V3yFJ@tR8Jv6Lz2#H4cUt9P&3KvD5Z9LxE1rL6
 jwt.expiration=86400
